--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": false,
 	"dependencies": {
-  	"redis": "0.8.4",
+  	"redis": "*",
   	"pomelo-logger": "0.0.3"
 	}
 }
